Stop using custom solution for include paths and linked libs
use default cmake >= 3.0 facilities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11"  )
 endif()
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_definitions(-D__STDC_FORMAT_MACROS)
 
@@ -38,8 +39,6 @@ find_package(Qt5Sql REQUIRED)
 link_directories(${ThirdParty_Install_Dir}/lib)
 include_directories(${ThirdParty_Install_Dir}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include)
-
-include(SEGS_Components)
 
 include_directories(Components)
 
