--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -20,9 +20,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/GameLink.h
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(target_DEPENDS "")
 
-SEGS_ADD_COMPONENT(cox_server_common LIB)
-SEGS_ADD_COMPONENT(adminserver_lib LIB) # later on this will be an AdminServerProxy component
-
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
 SET (target_SOURCES
@@ -30,7 +27,6 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 ADD_LIBRARY(gameserver_lib STATIC ${target_SOURCES})
+target_link_libraries(gameserver_lib adminserver_lib)
 qt5_use_modules(gameserver_lib Core)
 ADD_DEPENDENCIES(gameserver_lib gameData ${target_DEPENDS})
-
-SEGS_REGISTER_COMPONENT(gameserver_lib "${target_INCLUDE_DIR}" "${target_INCLUDE}" )
