max_char_slots is now runtime configurable which closes #79

--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -11,6 +11,7 @@ CharacterDatabase\db_port=5432
 CharacterDatabase\db_name=segs_game
 CharacterDatabase\db_user=segsadmin
 CharacterDatabase\db_pass=segs123
+CharacterDatabase\max_char_slots=8
 
 [AuthServer] 
 listen_addr= this_is_the_ip_the_clients_will_connect_to:2106
