--- a/Projects/CoX/Data/settings.cfg
+++ b/Projects/CoX/Data/settings.cfg
@@ -1,27 +1,27 @@
 [AdminServer]
-AccountDatabase\db_driver=QSQLITE
-AccountDatabase\db_host=127.0.0.1
-AccountDatabase\db_port=5432
-AccountDatabase\db_name=segs
-AccountDatabase\db_user=segsadmin
-AccountDatabase\db_pass=segs123
-CharacterDatabase\db_driver=QSQLITE
-CharacterDatabase\db_host=127.0.0.1
-CharacterDatabase\db_port=5432
-CharacterDatabase\db_name=segs_game
-CharacterDatabase\db_user=segsadmin
-CharacterDatabase\db_pass=segs123
+AccountDatabase\db_driver   = QSQLITE
+AccountDatabase\db_host     = 127.0.0.1
+AccountDatabase\db_port     = 5432
+AccountDatabase\db_name     = segs
+AccountDatabase\db_user     = segsadmin
+AccountDatabase\db_pass     = segs123
+CharacterDatabase\db_driver = QSQLITE
+CharacterDatabase\db_host   = 127.0.0.1
+CharacterDatabase\db_port   = 5432
+CharacterDatabase\db_name   = segs_game
+CharacterDatabase\db_user   = segsadmin
+CharacterDatabase\db_pass   = segs123
 
 [AuthServer] 
-listen_addr= this_is_the_ip_the_clients_will_connect_to:2106
+listen_addr       = this_is_the_ip_the_clients_will_connect_to:2106
 
 [GameServer] 
-server_name  =first server
-listen_addr  =this_is_the_ip_the_clients_will_connect_to:7002
-location_addr=this_is_the_ip_the_clients_will_receive_from_server:7002
-max_players  =200
+server_name       = first server
+listen_addr       = this_is_the_ip_the_clients_will_connect_to:7002
+location_addr     = this_is_the_ip_the_clients_will_receive_from_server:7002
+max_players       = 200
+max_account_slots = 8
 
 [MapServer]  
-listen_addr  =this_is_the_ip_the_clients_will_connect_to:7003
-location_addr=this_is_the_ip_the_clients_will_receive_from_server:7003
-
+listen_addr       = this_is_the_ip_the_clients_will_connect_to:7003
+location_addr     = this_is_the_ip_the_clients_will_receive_from_server:7003
