Add starter files to default_dbs folder regardless, but only to base folder if they don't already exists

--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -7,26 +7,30 @@ ADD_SUBDIRECTORY(Servers)
 ADD_SUBDIRECTORY(Clients)
 
 # Add README, settings.cfg, and Starter Databases
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/default_dbs/README.md COPYONLY)
 if(EXISTS ${EXECUTABLE_OUTPUT_PATH}/README.md)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/defaults/README.md COPYONLY)
+  # nothing else needs to be done
 else
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/README.md COPYONLY)
 endif
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/default_dbs/settings.cfg COPYONLY)
 if(EXISTS ${EXECUTABLE_OUTPUT_PATH}/settings.cfg)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/defaults/settings.cfg COPYONLY)
+  # nothing else needs to be done
 else
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/settings.cfg COPYONLY)
 endif
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs COPYONLY)
 if(EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/defaults/segs COPYONLY)
+  # nothing else needs to be done
 else
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/segs COPYONLY)
 endif
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs_game COPYONLY)
 if(EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs_game)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/defaults/segs_game COPYONLY)
+  # nothing else needs to be done
 else
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/segs_game COPYONLY)
 endif
