--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -10,19 +10,19 @@ ADD_SUBDIRECTORY(Clients)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/default_dbs/README.md COPYONLY)
 if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/README.md)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/README.md ${EXECUTABLE_OUTPUT_PATH}/README.md COPYONLY)
-endif
+endif()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/default_dbs/settings.cfg COPYONLY)
 if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/settings.cfg)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/settings.cfg COPYONLY)
-endif
+endif()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs COPYONLY)
 if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/segs COPYONLY)
-endif
+endif()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs_game COPYONLY)
 if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs_game)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/segs_game COPYONLY)
-endif
+endif()
