--- a/Projects/CoX/Utilities/dbtool/CMakeLists.txt
+++ b/Projects/CoX/Utilities/dbtool/CMakeLists.txt
@@ -6,8 +6,7 @@ IF(MSVC)
 ELSE()
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
 ENDIF()
-find_package(Qt5Core)
-find_package(QtSql)
+find_package(Qt5 COMPONENTS Core Sql REQUIRED)
 
 set(tool_SRC
     main.cpp
