Introduce Per-server runtime data classes, use PIMPL for Map and Game servers, get rid of the WorldData singelton.
Those are responsible for loading and providing server specific data
files.

The NetStructure class was removed.

Resolves #93

--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/HashStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CharacterClient.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameServer.h
+${CMAKE_CURRENT_SOURCE_DIR}/GameServerData.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameHandler.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEventFactory.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEvents.h
