Load and use origins and classes data files.
Properly fill in origin and class indices in player Entities.

resolves: #107

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -4,46 +4,48 @@ else()
     set(SCRIPTING_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ScriptingEngine_Null.cpp)
 endif()
 SET(target_CPP
-${CMAKE_CURRENT_SOURCE_DIR}/MapManager.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.cpp
-${SCRIPTING_CPP}
-${CMAKE_CURRENT_SOURCE_DIR}/MapClient.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapServer.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/DataHelpers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/EntityStorage.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapLink.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/MapServerData.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/Events/InputState.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/Events/InputState.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapClient.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapLink.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapManager.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapServer.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapServerData.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.cpp
+${SCRIPTING_CPP}
 )
 SET(target_INCLUDE
-${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapManager.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.h
+${CMAKE_CURRENT_SOURCE_DIR}/DataHelpers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/EntityStorage.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapClient.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapLink.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapEvents.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapRef.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapServer.h
-${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.h
-${CMAKE_CURRENT_SOURCE_DIR}/ScriptingEngine.h
-${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.h
-${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatDividerMoved.h
-${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/ChatMessage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/EntitiesResponse.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/InputState.h
+${CMAKE_CURRENT_SOURCE_DIR}/Events/NewEntity.h
+${CMAKE_CURRENT_SOURCE_DIR}/Events/SceneEvent.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Events/Shortcuts.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapClient.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapEventFactory.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapEvents.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapInstance.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapLink.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapManager.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapRef.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapServer.h
+${CMAKE_CURRENT_SOURCE_DIR}/MapTemplate.h
+${CMAKE_CURRENT_SOURCE_DIR}/NetCommandManager.h
+${CMAKE_CURRENT_SOURCE_DIR}/ScriptingEngine.h
+${CMAKE_CURRENT_SOURCE_DIR}/WorldSimulation.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
