Added missing headers in CMakeLists.txt

--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -12,6 +12,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Powers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Character.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
+${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
+${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
 )
 
 
