Add FloatingDamage and InfoMessageCmd commands
Also allow accessing owner client of the Entity ( if it has one. )

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -45,6 +45,8 @@ SET(target_INCLUDE
     Events/MapEventTypes.h
     Events/SceneEvent.h
     Events/Shortcuts.h
+    Events/StandardDialogCmd.h
+    Events/InfoMessageCmd.h
     MapClient.h
     MapEventFactory.h
     MapEvents.h
