--- a/Projects/CoX/Clients/Client_I0/CMakeLists.txt
+++ b/Projects/CoX/Clients/Client_I0/CMakeLists.txt
@@ -3,25 +3,35 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 PROJECT(CoH_Patch)
 IF(MSVC)
     add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS -DNOMINMAX -D_USE_MATH_DEFINES)
+    if (MSVC_VERSION GREATER_EQUAL "1900")
+        include(CheckCXXCompilerFlag)
+        CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
+        if (_cpp_latest_flag_supported)
+            add_compile_options("/std:c++latest")
+        endif()
+    endif()
 ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11"  )
 endif()
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-LINK_DIRECTORIES(../patch_tools)
+
+SET(CMAKE_MODULE_PATH ../../../../CMakeScripts;${CMAKE_MODULE_PATH})
+include(3rdparty_support)
+set(ThirdParty_Install_Dir ${CMAKE_CURRENT_BINARY_DIR}/3rd_party/built)
+
+add_subdirectory(3rd_party)
+
+link_directories(
+    ${ThirdParty_Install_Dir}/lib
+    ../patch_tools
+)
 include_directories(
+    ${ThirdParty_Install_Dir}/include
     ${CMAKE_CURRENT_SOURCE_DIR}
     include
 )
-set (CMAKE_CXX_STANDARD 17)
-if (MSVC_VERSION GREATER_EQUAL "1900")
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
-    if (_cpp_latest_flag_supported)
-        add_compile_options("/std:c++latest")
-    endif()
-endif()
 set(DLL_SOURCES
     include/GameState.h
     renderer/RendererUtils.cpp
@@ -37,7 +47,7 @@ set(SOURCES
 )
 add_library(cohdll SHARED ${SOURCES})
 # we link to the imp lib for the exe
-target_link_libraries(cohdll CityOfPatches)
+target_link_libraries(cohdll CityOfX glew_IMP)
 # enforce the dll prefix.
 SET_TARGET_PROPERTIES(cohdll PROPERTIES PREFIX "lib"
     RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out)
