More slash commands, add fields to DB, replacement strings for chat, and more - Added replacement strings for chat - Pulled experience table for setXP() from serialized bin data. - /lfg - /setInf num - /set - Filled some data from the DB upon character load - Rebased and resolved conflicts in EntitiesResponse.cpp - Added many TODO comments

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -6,6 +6,7 @@ set(GAMEDATA_SRC
     anim_serializers.h
     attrib_serializers.cpp
     attrib_serializers.h
+    attrib_definitions.h
     bodypart_serializers.cpp
     bodypart_serializers.h
     scenegraph_serializers.h
