Fix build for lutefisk + client patching

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ include_directories(Components)
 add_subdirectory(Components)
 add_subdirectory(Utilities)
 add_subdirectory(Projects)
+message(Qt5 ${QT5Core_DIR})
