Add auth server exerciser skeleton.

--- a/Projects/CoX/Utilities/CMakeLists.txt
+++ b/Projects/CoX/Utilities/CMakeLists.txt
@@ -4,3 +4,4 @@ ENDIF(BUILD_COX_MAP_VIEWER)
 ADD_SUBDIRECTORY(piggtool)
 ADD_SUBDIRECTORY(BinConverter)
 ADD_SUBDIRECTORY(dbtool)
+ADD_SUBDIRECTORY(AuthExerciser)
