AuthExerciser fixups + linking AuthProtocol lib

--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -6,6 +6,7 @@ qt5_use_modules(AuthExerciser Core)
 TARGET_LINK_LIBRARIES(AuthExerciser
 	${target_DEPENDS} 
 	SEGS_Components
+	AuthProtocol
 	${CMAKE_THREAD_LIBS_INIT}
 	ace_IMP
 	${CMAKE_DL_LIBS}
