Copy entire db directories instead of single files
Copy the `pgsql` and `sqlite` directories to the `default_dbs` directory, instead of the two premade databases.

This in turn makes the premade databases unnecessary, so delete them.

--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -14,12 +14,5 @@ if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/settings.cfg)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/settings.cfg ${EXECUTABLE_OUTPUT_PATH}/settings.cfg COPYONLY)
 endif()
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs COPYONLY)
-if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs ${EXECUTABLE_OUTPUT_PATH}/segs COPYONLY)
-endif()
-
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/default_dbs/segs_game COPYONLY)
-if(NOT EXISTS ${EXECUTABLE_OUTPUT_PATH}/segs_game)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite/segs_game ${EXECUTABLE_OUTPUT_PATH}/segs_game COPYONLY)
-endif()
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/pgsql DESTINATION ${EXECUTABLE_OUTPUT_PATH}/default_dbs)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Data/sqlite DESTINATION ${EXECUTABLE_OUTPUT_PATH}/default_dbs)
