--- a/Projects/CoX/Common/CMakeLists.txt
+++ b/Projects/CoX/Common/CMakeLists.txt
@@ -5,3 +5,4 @@ ADD_SUBDIRECTORY(NetStructures)
 ADD_SUBDIRECTORY(Servers)
 ADD_SUBDIRECTORY(GameData)
 ADD_SUBDIRECTORY(AuthProtocol)
+ADD_SUBDIRECTORY(PasswordHasher)
