--- a/Projects/CoX/Utilities/dbtool/CMakeLists.txt
+++ b/Projects/CoX/Utilities/dbtool/CMakeLists.txt
@@ -14,3 +14,4 @@ set(tool_SRC
 add_executable(dbtool ${tool_SRC})
 qt5_use_modules(dbtool Core)
 target_link_libraries(dbtool Qt5::Core Qt5::Sql)
+target_link_libraries(dbtool password_hasher)
